<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:orientation="vertical" 
	android:layout_width="fill_parent"
	android:layout_height="fill_parent" 
	android:background="@drawable/androidbackground">
	<TableLayout android:id="@+id/TableLayout01"
		android:layout_width="wrap_content" 
		android:layout_height="wrap_content"
		android:paddingTop="60dip" 
		android:paddingLeft="3dip">
		<Button android:id="@+id/newButton" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/newButtonText" 
			android:textColor="@color/blood_red" 
			android:background="@color/zomDroid_green"
			android:textStyle="bold" 
			android:textSize="18sp" 
			android:height="40px"
			android:layout_marginTop="8px"/>
		<Button android:id="@+id/joinButton" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/joinButtonText"
			android:textColor="@color/blood_red" 
			android:background="@color/zomDroid_green"
			android:textStyle="bold" 
			android:textSize="18sp" 
			android:height="40px"
			android:layout_marginTop="8px"/>
		<Button android:id="@+id/aboutButton" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/aboutButtonText" 
			android:textColor="@color/blood_red" 
			android:background="@color/zomDroid_green"
			android:textStyle="bold" 
			android:textSize="16sp" 
			android:height="40px"
			android:layout_marginTop="8px"/>
		<Button android:id="@+id/exitButton" 
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" 
			android:text="@string/exitButtonText" 
			android:textColor="@color/blood_red" 
			android:background="@color/zomDroid_green"
			android:textStyle="bold" 
			android:textSize="18sp" 
			android:height="40px"
			android:layout_marginTop="8px" />
	</TableLayout>
</LinearLayout>
